force-app/main/default/objects/Booking_Service__c/Booking_Service__c.object-meta.xml
<CustomObject>
    <label>Booking Service</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Booking Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>